backon-macros/tests/cases/fail_method_mut_context.stderr
error: `#[backon]` does not yet support methods taking `&mut self`; please fall back to manual `RetryableWithContext` usage
 --> tests/cases/fail_method_mut_context.rs:9:20
  |
9 |     async fn bump(&mut self, payload: String) -> Result<(), ()> {
  |                    ^^^
