backon-macros/tests/cases/fail_method_mut_context.rs
use backon_macros::backon;

struct Counter {
    value: usize,
}

impl Counter {
    #[backon(context = true)]
    async fn bump(&mut self, payload: String) -> Result<(), ()> {
        let _ = payload;
        Err(())
    }
}

fn main() {}
